Add desktop SceneViewer via filament-kmp (#2540)
Wire the sceneview-compose desktop actual to Maven filament-kmp.
samples/desktop-demo consumes SceneViewer. Public API unchanged.